Bug 1521774: Ensure a DC is available when using the generic dc on the main thread. r=rhunt a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D19146